# python-chess-coverage

./: .gitignore  CHANGES.txt  README.md  coverage.py  pyproject.toml  tests.py
chess_coverage/: coverage.py
src/chess_coverage/: __init__.py
tests/: tests.py
