[project]
name = "chess_coverage"
version = "0.0.10"
authors = [
  { name="Gene Boggs", email="gene.boggs@gmail.com" },
]
description = "Expose the potential energy of chess ply"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "chess",
]

[project.urls]
Homepage = "https://github.com/ology/python-chess-coverage"
Issues = "https://github.com/ology/python-chess-coverage/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
